main page and fixed margin on mobile

--- a/src/pages/mainpage.css
+++ b/src/pages/mainpage.css
@@ -1,11 +1,34 @@
 .project-card{
     width: fit-content;
+    border-radius: 0;
+    transition: all ease-in-out 0.2s;
+}
+.project-card:hover{
+    box-shadow: 3px 5px 16px 0 rgb(33 37 41 / 48%);
+    transform: scale(1.1);
+    z-index: 500;
 }
 .project-card img{
     height: 200px;
     width: auto;
+    border-radius: 0;
 }
 
-/* .card-container > *{
-    display: inline-block;
-} */
+.card-container {
+    padding: 1.5rem;
+}
+
+.card-img-overlay{
+    /* visibility: hidden; */
+    opacity: 0;
+    transition: all ease-in-out 0.2s;
+    background: linear-gradient(0deg, #232323, #00000008);
+}
+.card-img-overlay > h5, p {
+    color: #fff;
+    font-weight: bolder;
+}
+.project-card:hover .card-img-overlay{
+    /* visibility: visible; */
+    opacity: 1;
+}
