--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -86,13 +86,17 @@ body {
     background: url(/architectDeepBlue.svg) repeat;
     background-color: white;
 }
+main{
+    margin-top: 80px;
+    min-height: 100vh;
+}
 
 a {
     color: inherit;
     text-decoration: none;
 }
 
-h2{
+h2 {
     color: #000;
     font-size: 2rem;
     font-weight: bolder;
@@ -106,6 +110,33 @@ h2{
 
 @media screen and (min-width: 768px) {
     main {
+        margin-top: auto;
         margin-left: 80px !important;
     }
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #42424260;
+    /* border-radius: 90px; */
+    margin: 1px;
+}
+
+::-webkit-scrollbar-track:hover {
+    width: 10px;
+    height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #424242;
+    /* border-radius: 90px; */
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #3a3a3a;
+    height: 15px;
 }
